--- a/locale/it_IT/LC_MESSAGES/messages.po
+++ b/locale/it_IT/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-06-20 19:17+0300\n"
+"POT-Creation-Date: 2025-06-21 12:12+0300\n"
 "PO-Revision-Date: 2025-06-02 20:30+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Italian\n"
@@ -10958,7 +10958,8 @@ msgid ""
 "Create a database user with limited rights (select, insert, update, delete) "
 "for Poweradmin to access PowerDNS tables."
 msgstr ""
-"Crea un utente del database con diritti limitati (select, insert, update, delete) per consentire a Poweradmin di accedere alle tabelle PowerDNS."
+"Crea un utente del database con diritti limitati (select, insert, update, "
+"delete) per consentire a Poweradmin di accedere alle tabelle PowerDNS."
 
 #: install/templates/step6.html.twig:20
 msgid "Database Commands"
@@ -11037,7 +11038,6 @@ msgid "Configuring Database Connection"
 msgstr "Configurazione Connessione Database"
 
 #: install/templates/step4.html.twig:12
-#, auto-english-fallback
 msgid "Database Configuration:"
 msgstr "Configurazione Database:"
 
@@ -11046,10 +11046,10 @@ msgid ""
 "Configure database connection with table creation rights. PowerDNS location "
 "can be specified separately if needed."
 msgstr ""
-"Configura la connessione al database con i diritti di creazione tabelle. La posizione di PowerDNS può essere specificata separatamente se necessario."
+"Configura la connessione al database con i diritti di creazione tabelle. La "
+"posizione di PowerDNS può essere specificata separatamente se necessario."
 
 #: install/templates/step4.html.twig:20
-#, auto-english-fallback
 msgid "Database Connection Settings"
 msgstr "Impostazioni Connessione Database"
 
@@ -11058,7 +11058,6 @@ msgid "Database type"
 msgstr "Tipo di database"
 
 #: install/templates/step4.html.twig:33
-#, auto-english-fallback
 msgid "Database server type."
 msgstr "Tipo di server database."
 
@@ -11067,7 +11066,6 @@ msgid "Provide the user name"
 msgstr "Fornisci il nome utente"
 
 #: install/templates/step4.html.twig:44
-#, auto-english-fallback
 msgid "Database username with rights to create tables."
 msgstr "Nome utente del database con diritti per creare tabelle."
 
@@ -11108,7 +11106,6 @@ msgid "Provide the name of the database"
 msgstr "Fornisci il nome del database"
 
 #: install/templates/step4.html.twig:91
-#, auto-english-fallback
 msgid "Database name (will be used for Poweradmin tables)."
 msgstr "Nome del database (sarà utilizzato per le tabelle Poweradmin)."
 
@@ -11148,27 +11145,22 @@ msgstr ""
 "valore predefinito del database."
 
 #: install/templates/step4.html.twig:132
-#, auto-english-fallback
 msgid "PowerDNS Database"
 msgstr "Database PowerDNS"
 
 #: install/templates/step4.html.twig:136
-#, auto-english-fallback
 msgid "Database name"
 msgstr "Nome database"
 
 #: install/templates/step4.html.twig:139
-#, auto-english-fallback
 msgid "Leave empty for same database"
 msgstr "Lasciare vuoto per lo stesso database"
 
 #: install/templates/step4.html.twig:142
-#, auto-english-fallback
 msgid "MySQL database with PowerDNS tables (if different)."
 msgstr "Database MySQL con tabelle PowerDNS (se diverso)."
 
 #: install/templates/step4.html.twig:150
-#, auto-english-fallback
 msgid "Poweradmin Account"
 msgstr "Account Poweradmin"
 
@@ -11241,10 +11233,6 @@ msgstr "Alcuni componenti richiesti sono mancanti."
 msgid "Please install the missing components before continuing."
 msgstr "Si prega di installare i componenti mancanti prima di continuare."
 
-#: install/templates/step2.html.twig:118
-msgid "Check Again"
-msgstr "Controlla di Nuovo"
-
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
 msgstr "Configura account e server dei nomi"
@@ -11293,7 +11281,6 @@ msgid "Provide the DNS hostmaster"
 msgstr "Fornisci l'hostmaster DNS"
 
 #: install/templates/step5.html.twig:96
-#, auto-english-fallback
 msgid "Default hostmaster for SOA records."
 msgstr "Hostmaster predefinito per i record SOA."
 
@@ -11306,7 +11293,6 @@ msgid "Provide the primary nameserver"
 msgstr "Fornisci il server dei nomi primario"
 
 #: install/templates/step5.html.twig:108
-#, auto-english-fallback
 msgid "Primary nameserver for new zones."
 msgstr "Nameserver primario per nuove zone."
 
@@ -11319,7 +11305,6 @@ msgid "Provide the secondary nameserver"
 msgstr "Fornisci il server dei nomi secondario"
 
 #: install/templates/step5.html.twig:120
-#, auto-english-fallback
 msgid "Secondary nameserver for new zones."
 msgstr "Nameserver secondario per nuove zone."
 
@@ -11332,7 +11317,6 @@ msgid "optional"
 msgstr "opzionale"
 
 #: install/templates/step5.html.twig:133
-#, auto-english-fallback
 msgid "Optional tertiary nameserver for new zones."
 msgstr "Nameserver terziario opzionale per nuove zone."
 
@@ -11341,7 +11325,6 @@ msgid "Quaternary Nameserver"
 msgstr "Server dei nomi quaternario"
 
 #: install/templates/step5.html.twig:146
-#, auto-english-fallback
 msgid "Optional quaternary nameserver for new zones."
 msgstr "Nameserver quaternario opzionale per nuove zone."
 
@@ -11403,32 +11386,26 @@ msgid "Getting Ready"
 msgstr "Preparazione"
 
 #: install/templates/step3.html.twig:13
-#, auto-english-fallback
 msgid "Prerequisites"
 msgstr "Prerequisiti"
 
 #: install/templates/step3.html.twig:16
-#, auto-english-fallback
 msgid "Before proceeding, ensure you have:"
 msgstr "Prima di procedere, assicurati di avere:"
 
 #: install/templates/step3.html.twig:18
-#, auto-english-fallback
 msgid "PowerDNS installed with database tables created"
 msgstr "PowerDNS installato con tabelle del database create"
 
 #: install/templates/step3.html.twig:19
-#, auto-english-fallback
 msgid "Database credentials (hostname, username, password)"
 msgstr "Credenziali del database (hostname, nome utente, password)"
 
 #: install/templates/step3.html.twig:20
-#, auto-english-fallback
 msgid "Permission to create tables for Poweradmin"
 msgstr "Permesso di creare tabelle per Poweradmin"
 
 #: install/templates/step3.html.twig:27
-#, auto-english-fallback
 msgid "Next:"
 msgstr "Successivo:"
 
@@ -11437,7 +11414,8 @@ msgid ""
 "Configure database connection, create admin account, and generate "
 "configuration file."
 msgstr ""
-"Configura la connessione al database, crea un account amministratore e genera il file di configurazione."
+"Configura la connessione al database, crea un account amministratore e "
+"genera il file di configurazione."
 
 #: install/helpers/InstallStepHandler.php:183
 msgid "Missing PowerDNS tables:"
@@ -11558,7 +11536,8 @@ msgid ""
 "Separate PowerDNS databases are only supported with MySQL. For PostgreSQL "
 "and SQLite, please use the same database."
 msgstr ""
-"I database PowerDNS separati sono supportati solo con MySQL. Per PostgreSQL e SQLite, utilizzare lo stesso database."
+"I database PowerDNS separati sono supportati solo con MySQL. Per PostgreSQL "
+"e SQLite, utilizzare lo stesso database."
 
 #: install/helpers/Validators/PdnsDatabaseValidationTrait.php:75
 #, php-format
@@ -11566,162 +11545,12 @@ msgid ""
 "Missing PowerDNS tables in database \"%s\": %s. Please ensure PowerDNS is "
 "properly installed in this database."
 msgstr ""
-"Tabelle PowerDNS mancanti nel database \"%s\": %s. Assicurati che PowerDNS sia installato correttamente in questo database."
+"Tabelle PowerDNS mancanti nel database \"%s\": %s. Assicurati che PowerDNS "
+"sia installato correttamente in questo database."
 
 #: install/helpers/Validators/PdnsDatabaseValidationTrait.php:82
 #, php-format
 msgid "Cannot connect to PowerDNS database \"%s\": %s"
 msgstr "Impossibile connettersi al database PowerDNS \"%s\": %s"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "You now want to give limited rights to Poweradmin so it can update the "
-# OBSOLETE: "data in the tables. To do this, you should create a new user and give it "
-# OBSOLETE: "rights to select, delete, insert, and update records in the PowerDNS "
-# OBSOLETE: "database."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Ora vuoi dare diritti limitati a Poweradmin in modo che possa aggiornare "
-# OBSOLETE: "i dati nelle tabelle. Per fare questo, dovresti creare un nuovo utente e "
-# OBSOLETE: "dargli i diritti per selezionare, eliminare, inserire e aggiornare i "
-# OBSOLETE: "record nel database PowerDNS."
-
-# OBSOLETE: msgid "Database Preparation:"
-# OBSOLETE: msgstr "Preparazione Database:"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "The installer needs to modify the PowerDNS database with tables for "
-# OBSOLETE: "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "L'installer deve modificare il database PowerDNS con tabelle per "
-# OBSOLETE: "Poweradmin. Utilizza un account con diritti sufficienti (come root) per "
-# OBSOLETE: "procedere."
-
-# OBSOLETE: msgid "Important:"
-# OBSOLETE: msgstr "Importante:"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "Poweradmin requires a properly configured PowerDNS database with tables "
-# OBSOLETE: "already created. This installer will NOT create PowerDNS tables - only "
-# OBSOLETE: "Poweradmin-specific tables."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Poweradmin richiede un database PowerDNS configurato correttamente con "
-# OBSOLETE: "tabelle già create. Questo installer NON creerà tabelle PowerDNS - solo "
-# OBSOLETE: "tabelle specifiche di Poweradmin."
-
-# OBSOLETE: msgid "Database Settings"
-# OBSOLETE: msgstr "Impostazioni Database"
-
-# OBSOLETE: msgid "The type of the PowerDNS database."
-# OBSOLETE: msgstr "Il tipo di database PowerDNS."
-
-# OBSOLETE: msgid "Database username with administrative rights."
-# OBSOLETE: msgstr "Nome utente del database con diritti amministrativi."
-
-# OBSOLETE: msgid "PowerDNS database name."
-# OBSOLETE: msgstr "Nome del database PowerDNS."
-
-# OBSOLETE: msgid "Administrator Account"
-# OBSOLETE: msgstr "Account Amministratore"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "Password for \"admin\" username with full rights to the Poweradmin "
-# OBSOLETE: "interface."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Password per l'utente \"admin\" con diritti completi all'interfaccia di "
-# OBSOLETE: "Poweradmin."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating SOA records and no hostmaster is provided, this value here "
-# OBSOLETE: "will be used."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Quando si creano record SOA e non viene fornito un hostmaster, verrà "
-# OBSOLETE: "utilizzato questo valore."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this value will be used as "
-# OBSOLETE: "primary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Quando si creano nuove zone utilizzando il template, questo valore verrà "
-# OBSOLETE: "utilizzato come nameserver primario."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this value will be used as "
-# OBSOLETE: "secondary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Quando si creano nuove zone utilizzando il template, questo valore verrà "
-# OBSOLETE: "utilizzato come nameserver secondario."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this optional value will be "
-# OBSOLETE: "used as tertiary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Quando si creano nuove zone utilizzando il template, questo valore "
-# OBSOLETE: "opzionale verrà utilizzato come nameserver terziario."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this optional value will be "
-# OBSOLETE: "used as quaternary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Quando si creano nuove zone utilizzando il template, questo valore "
-# OBSOLETE: "opzionale verrà utilizzato come nameserver quaternario."
-
-# OBSOLETE: msgid "Preparation:"
-# OBSOLETE: msgstr "Preparazione:"
-
-# OBSOLETE: msgid "Let's get your PowerDNS database ready for Poweradmin."
-# OBSOLETE: msgstr "Prepariamo il tuo database PowerDNS per Poweradmin."
-
-# OBSOLETE: msgid "About PowerDNS"
-# OBSOLETE: msgstr "Informazioni su PowerDNS"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "PowerDNS is a DNS server that stores its data in an SQL database. "
-# OBSOLETE: "Poweradmin will help you manage this database via a web interface."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "PowerDNS è un server DNS che memorizza i suoi dati in un database SQL. "
-# OBSOLETE: "Poweradmin ti aiuterà a gestire questo database tramite un'interfaccia "
-# OBSOLETE: "web."
-
-# OBSOLETE: msgid "Before proceeding, you should have:"
-# OBSOLETE: msgstr "Prima di procedere, dovresti avere:"
-
-# OBSOLETE: msgid "An operational PowerDNS installation"
-# OBSOLETE: msgstr "Un'installazione PowerDNS operativa"
-
-# OBSOLETE: msgid "Database connectivity details (hostname, username, password)"
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Dettagli di connessione al database (hostname, nome utente, password)"
-
-# OBSOLETE: msgid "Administrative access to your database"
-# OBSOLETE: msgstr "Accesso amministrativo al tuo database"
-
-# OBSOLETE: msgid "Database Preparations"
-# OBSOLETE: msgstr "Preparazioni del Database"
-
-# OBSOLETE: msgid "In the next steps, Poweradmin will:"
-# OBSOLETE: msgstr "Nei prossimi passi, Poweradmin:"
-
-# OBSOLETE: msgid "Connect to your PowerDNS database"
-# OBSOLETE: msgstr "Si connetterà al tuo database PowerDNS"
-
-# OBSOLETE: msgid "Create tables needed for Poweradmin functionality"
-# OBSOLETE: msgstr "Creerà le tabelle necessarie per le funzionalità di Poweradmin"
-
-# OBSOLETE: msgid "Set up an administrator account for web access"
-# OBSOLETE: msgstr "Configurerà un account amministratore per l'accesso web"
-
-# OBSOLETE: msgid "Create a config file to store your settings"
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Creerà un file di configurazione per memorizzare le tue impostazioni"
-
 
 
