--- a/locale/nl_NL/LC_MESSAGES/messages.po
+++ b/locale/nl_NL/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-06-20 19:17+0300\n"
+"POT-Creation-Date: 2025-06-21 12:12+0300\n"
 "PO-Revision-Date: 2025-06-08 12:20+0200\n"
 "Last-Translator: Michael Roehrkasten\n"
 "Language-Team: none\n"
@@ -10868,7 +10868,8 @@ msgid ""
 "Create a database user with limited rights (select, insert, update, delete) "
 "for Poweradmin to access PowerDNS tables."
 msgstr ""
-"Maak een databasegebruiker aan met beperkte rechten (select, insert, update, delete) zodat Poweradmin toegang heeft tot PowerDNS-tabellen."
+"Maak een databasegebruiker aan met beperkte rechten (select, insert, update, "
+"delete) zodat Poweradmin toegang heeft tot PowerDNS-tabellen."
 
 #: install/templates/step6.html.twig:20
 msgid "Database Commands"
@@ -10947,7 +10948,6 @@ msgid "Configuring Database Connection"
 msgstr "Databaseverbinding configureren"
 
 #: install/templates/step4.html.twig:12
-#, auto-english-fallback
 msgid "Database Configuration:"
 msgstr "Databaseconfiguratie:"
 
@@ -10956,10 +10956,10 @@ msgid ""
 "Configure database connection with table creation rights. PowerDNS location "
 "can be specified separately if needed."
 msgstr ""
-"Configureer databaseverbinding met rechten voor het maken van tabellen. PowerDNS-locatie kan indien nodig apart worden opgegeven."
+"Configureer databaseverbinding met rechten voor het maken van tabellen. "
+"PowerDNS-locatie kan indien nodig apart worden opgegeven."
 
 #: install/templates/step4.html.twig:20
-#, auto-english-fallback
 msgid "Database Connection Settings"
 msgstr "Databaseverbindingsinstellingen"
 
@@ -10968,7 +10968,6 @@ msgid "Database type"
 msgstr "Databasetype"
 
 #: install/templates/step4.html.twig:33
-#, auto-english-fallback
 msgid "Database server type."
 msgstr "Type databaseserver."
 
@@ -10977,7 +10976,6 @@ msgid "Provide the user name"
 msgstr "Geef de gebruikersnaam op"
 
 #: install/templates/step4.html.twig:44
-#, auto-english-fallback
 msgid "Database username with rights to create tables."
 msgstr "Databasegebruikersnaam met rechten om tabellen te maken."
 
@@ -11018,7 +11016,6 @@ msgid "Provide the name of the database"
 msgstr "Geef de naam van de database op"
 
 #: install/templates/step4.html.twig:91
-#, auto-english-fallback
 msgid "Database name (will be used for Poweradmin tables)."
 msgstr "Databasenaam (wordt gebruikt voor Poweradmin-tabellen)."
 
@@ -11057,27 +11054,22 @@ msgstr ""
 "database."
 
 #: install/templates/step4.html.twig:132
-#, auto-english-fallback
 msgid "PowerDNS Database"
 msgstr "PowerDNS Database"
 
 #: install/templates/step4.html.twig:136
-#, auto-english-fallback
 msgid "Database name"
 msgstr "Databasenaam"
 
 #: install/templates/step4.html.twig:139
-#, auto-english-fallback
 msgid "Leave empty for same database"
 msgstr "Laat leeg voor dezelfde database"
 
 #: install/templates/step4.html.twig:142
-#, auto-english-fallback
 msgid "MySQL database with PowerDNS tables (if different)."
 msgstr "MySQL-database met PowerDNS-tabellen (indien anders)."
 
 #: install/templates/step4.html.twig:150
-#, auto-english-fallback
 msgid "Poweradmin Account"
 msgstr "Poweradmin Account"
 
@@ -11150,10 +11142,6 @@ msgstr "Sommige vereiste componenten ontbreken."
 msgid "Please install the missing components before continuing."
 msgstr "Installeer de ontbrekende componenten voordat u doorgaat."
 
-#: install/templates/step2.html.twig:118
-msgid "Check Again"
-msgstr "Opnieuw controleren"
-
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
 msgstr "Account en naamservers instellen"
@@ -11202,7 +11190,6 @@ msgid "Provide the DNS hostmaster"
 msgstr "Geef de DNS-hostmaster op"
 
 #: install/templates/step5.html.twig:96
-#, auto-english-fallback
 msgid "Default hostmaster for SOA records."
 msgstr "Standaard hostmaster voor SOA-records."
 
@@ -11215,7 +11202,6 @@ msgid "Provide the primary nameserver"
 msgstr "Geef de primaire naamserver op"
 
 #: install/templates/step5.html.twig:108
-#, auto-english-fallback
 msgid "Primary nameserver for new zones."
 msgstr "Primaire nameserver voor nieuwe zones."
 
@@ -11228,7 +11214,6 @@ msgid "Provide the secondary nameserver"
 msgstr "Geef de secundaire naamserver op"
 
 #: install/templates/step5.html.twig:120
-#, auto-english-fallback
 msgid "Secondary nameserver for new zones."
 msgstr "Secundaire nameserver voor nieuwe zones."
 
@@ -11241,7 +11226,6 @@ msgid "optional"
 msgstr "optioneel"
 
 #: install/templates/step5.html.twig:133
-#, auto-english-fallback
 msgid "Optional tertiary nameserver for new zones."
 msgstr "Optionele tertiaire nameserver voor nieuwe zones."
 
@@ -11250,7 +11234,6 @@ msgid "Quaternary Nameserver"
 msgstr "Quaternaire naamserver"
 
 #: install/templates/step5.html.twig:146
-#, auto-english-fallback
 msgid "Optional quaternary nameserver for new zones."
 msgstr "Optionele quaternaire nameserver voor nieuwe zones."
 
@@ -11311,32 +11294,26 @@ msgid "Getting Ready"
 msgstr "Voorbereiden"
 
 #: install/templates/step3.html.twig:13
-#, auto-english-fallback
 msgid "Prerequisites"
 msgstr "Vereisten"
 
 #: install/templates/step3.html.twig:16
-#, auto-english-fallback
 msgid "Before proceeding, ensure you have:"
 msgstr "Voordat u doorgaat, zorg ervoor dat u het volgende heeft:"
 
 #: install/templates/step3.html.twig:18
-#, auto-english-fallback
 msgid "PowerDNS installed with database tables created"
 msgstr "PowerDNS geïnstalleerd met databasetabellen gemaakt"
 
 #: install/templates/step3.html.twig:19
-#, auto-english-fallback
 msgid "Database credentials (hostname, username, password)"
 msgstr "Database-inloggegevens (hostnaam, gebruikersnaam, wachtwoord)"
 
 #: install/templates/step3.html.twig:20
-#, auto-english-fallback
 msgid "Permission to create tables for Poweradmin"
 msgstr "Toestemming om tabellen voor Poweradmin te maken"
 
 #: install/templates/step3.html.twig:27
-#, auto-english-fallback
 msgid "Next:"
 msgstr "Volgende:"
 
@@ -11345,7 +11322,8 @@ msgid ""
 "Configure database connection, create admin account, and generate "
 "configuration file."
 msgstr ""
-"Configureer databaseverbinding, maak beheerdersaccount aan en genereer configuratiebestand."
+"Configureer databaseverbinding, maak beheerdersaccount aan en genereer "
+"configuratiebestand."
 
 #: install/helpers/InstallStepHandler.php:183
 msgid "Missing PowerDNS tables:"
@@ -11468,7 +11446,8 @@ msgid ""
 "Separate PowerDNS databases are only supported with MySQL. For PostgreSQL "
 "and SQLite, please use the same database."
 msgstr ""
-"Afzonderlijke PowerDNS-databases worden alleen ondersteund met MySQL. Voor PostgreSQL en SQLite, gebruik dezelfde database."
+"Afzonderlijke PowerDNS-databases worden alleen ondersteund met MySQL. Voor "
+"PostgreSQL en SQLite, gebruik dezelfde database."
 
 #: install/helpers/Validators/PdnsDatabaseValidationTrait.php:75
 #, php-format
@@ -11476,159 +11455,12 @@ msgid ""
 "Missing PowerDNS tables in database \"%s\": %s. Please ensure PowerDNS is "
 "properly installed in this database."
 msgstr ""
-"Ontbrekende PowerDNS-tabellen in database \"%s\": %s. Zorg ervoor dat PowerDNS correct is geïnstalleerd in deze database."
+"Ontbrekende PowerDNS-tabellen in database \"%s\": %s. Zorg ervoor dat "
+"PowerDNS correct is geïnstalleerd in deze database."
 
 #: install/helpers/Validators/PdnsDatabaseValidationTrait.php:82
 #, php-format
 msgid "Cannot connect to PowerDNS database \"%s\": %s"
 msgstr "Kan geen verbinding maken met PowerDNS-database \"%s\": %s"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "You now want to give limited rights to Poweradmin so it can update the "
-# OBSOLETE: "data in the tables. To do this, you should create a new user and give it "
-# OBSOLETE: "rights to select, delete, insert, and update records in the PowerDNS "
-# OBSOLETE: "database."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "U wilt nu beperkte rechten geven aan Poweradmin zodat het de gegevens in "
-# OBSOLETE: "de tabellen kan bijwerken. Hiervoor moet u een nieuwe gebruiker aanmaken "
-# OBSOLETE: "en deze rechten geven om records in de PowerDNS-database te selecteren, "
-# OBSOLETE: "verwijderen, invoegen en bijwerken."
-
-# OBSOLETE: msgid "Database Preparation:"
-# OBSOLETE: msgstr "Databasevoorbereiding:"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "The installer needs to modify the PowerDNS database with tables for "
-# OBSOLETE: "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "De installer moet de PowerDNS-database wijzigen met tabellen voor "
-# OBSOLETE: "Poweradmin. Gebruik een account met voldoende rechten (zoals root) om "
-# OBSOLETE: "verder te gaan."
-
-# OBSOLETE: msgid "Important:"
-# OBSOLETE: msgstr "Belangrijk:"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "Poweradmin requires a properly configured PowerDNS database with tables "
-# OBSOLETE: "already created. This installer will NOT create PowerDNS tables - only "
-# OBSOLETE: "Poweradmin-specific tables."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Poweradmin vereist een correct geconfigureerde PowerDNS database met "
-# OBSOLETE: "reeds aangemaakte tabellen. Deze installer zal GEEN PowerDNS tabellen "
-# OBSOLETE: "aanmaken - alleen Poweradmin-specifieke tabellen."
-
-# OBSOLETE: msgid "Database Settings"
-# OBSOLETE: msgstr "Database-instellingen"
-
-# OBSOLETE: msgid "The type of the PowerDNS database."
-# OBSOLETE: msgstr "Het type van de PowerDNS-database."
-
-# OBSOLETE: msgid "Database username with administrative rights."
-# OBSOLETE: msgstr "Database-gebruikersnaam met administratieve rechten."
-
-# OBSOLETE: msgid "PowerDNS database name."
-# OBSOLETE: msgstr "PowerDNS-databasenaam."
-
-# OBSOLETE: msgid "Administrator Account"
-# OBSOLETE: msgstr "Beheerdersaccount"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "Password for \"admin\" username with full rights to the Poweradmin "
-# OBSOLETE: "interface."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Wachtwoord voor \"admin\" gebruikersnaam met volledige rechten voor de "
-# OBSOLETE: "Poweradmin-interface."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating SOA records and no hostmaster is provided, this value here "
-# OBSOLETE: "will be used."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Bij het maken van SOA-records en als er geen hostmaster is opgegeven, "
-# OBSOLETE: "wordt deze waarde gebruikt."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this value will be used as "
-# OBSOLETE: "primary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Bij het maken van nieuwe zones met de sjabloon wordt deze waarde gebruikt "
-# OBSOLETE: "als primaire nameserver."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this value will be used as "
-# OBSOLETE: "secondary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Bij het maken van nieuwe zones met de sjabloon wordt deze waarde gebruikt "
-# OBSOLETE: "als secundaire nameserver."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this optional value will be "
-# OBSOLETE: "used as tertiary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Bij het maken van nieuwe zones met de sjabloon wordt deze optionele "
-# OBSOLETE: "waarde gebruikt als tertiaire nameserver."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this optional value will be "
-# OBSOLETE: "used as quaternary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Bij het maken van nieuwe zones met de sjabloon wordt deze optionele "
-# OBSOLETE: "waarde gebruikt als quaternaire nameserver."
-
-# OBSOLETE: msgid "Preparation:"
-# OBSOLETE: msgstr "Voorbereiding:"
-
-# OBSOLETE: msgid "Let's get your PowerDNS database ready for Poweradmin."
-# OBSOLETE: msgstr "Laten we uw PowerDNS-database klaarmaken voor Poweradmin."
-
-# OBSOLETE: msgid "About PowerDNS"
-# OBSOLETE: msgstr "Over PowerDNS"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "PowerDNS is a DNS server that stores its data in an SQL database. "
-# OBSOLETE: "Poweradmin will help you manage this database via a web interface."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "PowerDNS is een DNS-server die zijn gegevens opslaat in een SQL-database. "
-# OBSOLETE: "Poweradmin helpt u deze database te beheren via een webinterface."
-
-# OBSOLETE: msgid "Before proceeding, you should have:"
-# OBSOLETE: msgstr "Voordat u verder gaat, moet u beschikken over:"
-
-# OBSOLETE: msgid "An operational PowerDNS installation"
-# OBSOLETE: msgstr "Een werkende PowerDNS-installatie"
-
-# OBSOLETE: msgid "Database connectivity details (hostname, username, password)"
-# OBSOLETE: msgstr "Database verbindingsgegevens (hostname, gebruikersnaam, wachtwoord)"
-
-# OBSOLETE: msgid "Administrative access to your database"
-# OBSOLETE: msgstr "Administratieve toegang tot uw database"
-
-# OBSOLETE: msgid "Database Preparations"
-# OBSOLETE: msgstr "Database-voorbereidingen"
-
-# OBSOLETE: msgid "In the next steps, Poweradmin will:"
-# OBSOLETE: msgstr "In de volgende stappen zal Poweradmin:"
-
-# OBSOLETE: msgid "Connect to your PowerDNS database"
-# OBSOLETE: msgstr "Verbinding maken met uw PowerDNS-database"
-
-# OBSOLETE: msgid "Create tables needed for Poweradmin functionality"
-# OBSOLETE: msgstr "Tabellen aanmaken die nodig zijn voor Poweradmin-functionaliteit"
-
-# OBSOLETE: msgid "Set up an administrator account for web access"
-# OBSOLETE: msgstr "Een beheerdersaccount instellen voor webtoegang"
-
-# OBSOLETE: msgid "Create a config file to store your settings"
-# OBSOLETE: msgstr "Een configuratiebestand aanmaken om uw instellingen op te slaan"
-
 
 
