--- a/locale/pt_PT/LC_MESSAGES/messages.po
+++ b/locale/pt_PT/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-06-20 19:17+0300\n"
+"POT-Creation-Date: 2025-06-21 12:12+0300\n"
 "PO-Revision-Date: 2025-06-08 12:20+0200\n"
 "Last-Translator: Michael Roehrkasten\n"
 "Language-Team: none\n"
@@ -10899,7 +10899,8 @@ msgid ""
 "Create a database user with limited rights (select, insert, update, delete) "
 "for Poweradmin to access PowerDNS tables."
 msgstr ""
-"Crie um utilizador de base de dados com direitos limitados (select, insert, update, delete) para o Poweradmin aceder às tabelas PowerDNS."
+"Crie um utilizador de base de dados com direitos limitados (select, insert, "
+"update, delete) para o Poweradmin aceder às tabelas PowerDNS."
 
 #: install/templates/step6.html.twig:20
 msgid "Database Commands"
@@ -10979,7 +10980,6 @@ msgid "Configuring Database Connection"
 msgstr "Configuração da Ligação à Base de Dados"
 
 #: install/templates/step4.html.twig:12
-#, auto-english-fallback
 msgid "Database Configuration:"
 msgstr "Configuração da Base de Dados:"
 
@@ -10988,10 +10988,10 @@ msgid ""
 "Configure database connection with table creation rights. PowerDNS location "
 "can be specified separately if needed."
 msgstr ""
-"Configure a ligação à base de dados com direitos de criação de tabelas. A localização do PowerDNS pode ser especificada separadamente se necessário."
+"Configure a ligação à base de dados com direitos de criação de tabelas. A "
+"localização do PowerDNS pode ser especificada separadamente se necessário."
 
 #: install/templates/step4.html.twig:20
-#, auto-english-fallback
 msgid "Database Connection Settings"
 msgstr "Definições de Ligação à Base de Dados"
 
@@ -11000,7 +11000,6 @@ msgid "Database type"
 msgstr "Tipo de base de dados"
 
 #: install/templates/step4.html.twig:33
-#, auto-english-fallback
 msgid "Database server type."
 msgstr "Tipo de servidor de base de dados."
 
@@ -11009,7 +11008,6 @@ msgid "Provide the user name"
 msgstr "Forneça o nome de utilizador"
 
 #: install/templates/step4.html.twig:44
-#, auto-english-fallback
 msgid "Database username with rights to create tables."
 msgstr "Nome de utilizador da base de dados com direitos para criar tabelas."
 
@@ -11050,7 +11048,6 @@ msgid "Provide the name of the database"
 msgstr "Forneça o nome da base de dados"
 
 #: install/templates/step4.html.twig:91
-#, auto-english-fallback
 msgid "Database name (will be used for Poweradmin tables)."
 msgstr "Nome da base de dados (será usado para as tabelas do Poweradmin)."
 
@@ -11090,27 +11087,22 @@ msgstr ""
 "predefinição da base de dados."
 
 #: install/templates/step4.html.twig:132
-#, auto-english-fallback
 msgid "PowerDNS Database"
 msgstr "Base de Dados PowerDNS"
 
 #: install/templates/step4.html.twig:136
-#, auto-english-fallback
 msgid "Database name"
 msgstr "Nome da base de dados"
 
 #: install/templates/step4.html.twig:139
-#, auto-english-fallback
 msgid "Leave empty for same database"
 msgstr "Deixe vazio para a mesma base de dados"
 
 #: install/templates/step4.html.twig:142
-#, auto-english-fallback
 msgid "MySQL database with PowerDNS tables (if different)."
 msgstr "Base de dados MySQL com tabelas PowerDNS (se diferente)."
 
 #: install/templates/step4.html.twig:150
-#, auto-english-fallback
 msgid "Poweradmin Account"
 msgstr "Conta Poweradmin"
 
@@ -11184,10 +11176,6 @@ msgstr "Alguns componentes necessários estão em falta."
 msgid "Please install the missing components before continuing."
 msgstr "Por favor, instale os componentes em falta antes de continuar."
 
-#: install/templates/step2.html.twig:118
-msgid "Check Again"
-msgstr "Verificar Novamente"
-
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
 msgstr "Configurar conta e servidores de nomes"
@@ -11236,7 +11224,6 @@ msgid "Provide the DNS hostmaster"
 msgstr "Forneça o administrador DNS"
 
 #: install/templates/step5.html.twig:96
-#, auto-english-fallback
 msgid "Default hostmaster for SOA records."
 msgstr "Hostmaster predefinido para registos SOA."
 
@@ -11249,7 +11236,6 @@ msgid "Provide the primary nameserver"
 msgstr "Forneça o servidor de nomes primário"
 
 #: install/templates/step5.html.twig:108
-#, auto-english-fallback
 msgid "Primary nameserver for new zones."
 msgstr "Servidor de nomes primário para novas zonas."
 
@@ -11262,7 +11248,6 @@ msgid "Provide the secondary nameserver"
 msgstr "Forneça o servidor de nomes secundário"
 
 #: install/templates/step5.html.twig:120
-#, auto-english-fallback
 msgid "Secondary nameserver for new zones."
 msgstr "Servidor de nomes secundário para novas zonas."
 
@@ -11275,7 +11260,6 @@ msgid "optional"
 msgstr "opcional"
 
 #: install/templates/step5.html.twig:133
-#, auto-english-fallback
 msgid "Optional tertiary nameserver for new zones."
 msgstr "Servidor de nomes terciário opcional para novas zonas."
 
@@ -11284,7 +11268,6 @@ msgid "Quaternary Nameserver"
 msgstr "Servidor de Nomes Quaternário"
 
 #: install/templates/step5.html.twig:146
-#, auto-english-fallback
 msgid "Optional quaternary nameserver for new zones."
 msgstr "Servidor de nomes quaternário opcional para novas zonas."
 
@@ -11344,33 +11327,28 @@ msgid "Getting Ready"
 msgstr "Preparação"
 
 #: install/templates/step3.html.twig:13
-#, auto-english-fallback
 msgid "Prerequisites"
 msgstr "Pré-requisitos"
 
 #: install/templates/step3.html.twig:16
-#, auto-english-fallback
 msgid "Before proceeding, ensure you have:"
 msgstr "Antes de prosseguir, certifique-se de que tem:"
 
 #: install/templates/step3.html.twig:18
-#, auto-english-fallback
 msgid "PowerDNS installed with database tables created"
 msgstr "PowerDNS instalado com tabelas de base de dados criadas"
 
 #: install/templates/step3.html.twig:19
-#, auto-english-fallback
 msgid "Database credentials (hostname, username, password)"
 msgstr ""
-"Credenciais da base de dados (nome do servidor, nome de utilizador, palavra-passe)"
+"Credenciais da base de dados (nome do servidor, nome de utilizador, palavra-"
+"passe)"
 
 #: install/templates/step3.html.twig:20
-#, auto-english-fallback
 msgid "Permission to create tables for Poweradmin"
 msgstr "Permissão para criar tabelas para o Poweradmin"
 
 #: install/templates/step3.html.twig:27
-#, auto-english-fallback
 msgid "Next:"
 msgstr "Seguinte:"
 
@@ -11379,7 +11357,8 @@ msgid ""
 "Configure database connection, create admin account, and generate "
 "configuration file."
 msgstr ""
-"Configure a ligação à base de dados, crie uma conta de administrador e gere o ficheiro de configuração."
+"Configure a ligação à base de dados, crie uma conta de administrador e gere "
+"o ficheiro de configuração."
 
 #: install/helpers/InstallStepHandler.php:183
 msgid "Missing PowerDNS tables:"
@@ -11502,7 +11481,8 @@ msgid ""
 "Separate PowerDNS databases are only supported with MySQL. For PostgreSQL "
 "and SQLite, please use the same database."
 msgstr ""
-"Bases de dados PowerDNS separadas são apenas suportadas com MySQL. Para PostgreSQL e SQLite, por favor use a mesma base de dados."
+"Bases de dados PowerDNS separadas são apenas suportadas com MySQL. Para "
+"PostgreSQL e SQLite, por favor use a mesma base de dados."
 
 #: install/helpers/Validators/PdnsDatabaseValidationTrait.php:75
 #, php-format
@@ -11510,162 +11490,12 @@ msgid ""
 "Missing PowerDNS tables in database \"%s\": %s. Please ensure PowerDNS is "
 "properly installed in this database."
 msgstr ""
-"Tabelas PowerDNS em falta na base de dados \"%s\": %s. Por favor certifique-se de que o PowerDNS está corretamente instalado nesta base de dados."
+"Tabelas PowerDNS em falta na base de dados \"%s\": %s. Por favor certifique-"
+"se de que o PowerDNS está corretamente instalado nesta base de dados."
 
 #: install/helpers/Validators/PdnsDatabaseValidationTrait.php:82
 #, php-format
 msgid "Cannot connect to PowerDNS database \"%s\": %s"
 msgstr "Não é possível ligar à base de dados PowerDNS \"%s\": %s"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "You now want to give limited rights to Poweradmin so it can update the "
-# OBSOLETE: "data in the tables. To do this, you should create a new user and give it "
-# OBSOLETE: "rights to select, delete, insert, and update records in the PowerDNS "
-# OBSOLETE: "database."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Agora pretende dar direitos limitados ao Poweradmin para que possa "
-# OBSOLETE: "atualizar os dados nas tabelas. Para isso, deve criar um novo utilizador "
-# OBSOLETE: "e dar-lhe direitos para seleccionar, eliminar, inserir e atualizar "
-# OBSOLETE: "registos na base de dados PowerDNS."
-
-# OBSOLETE: msgid "Database Preparation:"
-# OBSOLETE: msgstr "Preparação da Base de Dados:"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "The installer needs to modify the PowerDNS database with tables for "
-# OBSOLETE: "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "O instalador precisa de modificar a base de dados PowerDNS com tabelas "
-# OBSOLETE: "para o Poweradmin. Use uma conta com direitos suficientes (como root) "
-# OBSOLETE: "para prosseguir."
-
-# OBSOLETE: msgid "Important:"
-# OBSOLETE: msgstr "Importante:"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "Poweradmin requires a properly configured PowerDNS database with tables "
-# OBSOLETE: "already created. This installer will NOT create PowerDNS tables - only "
-# OBSOLETE: "Poweradmin-specific tables."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "O Poweradmin requer uma base de dados PowerDNS devidamente configurada "
-# OBSOLETE: "com tabelas já criadas. Este instalador NÃO criará tabelas PowerDNS - "
-# OBSOLETE: "apenas tabelas específicas do Poweradmin."
-
-# OBSOLETE: msgid "Database Settings"
-# OBSOLETE: msgstr "Configurações da Base de Dados"
-
-# OBSOLETE: msgid "The type of the PowerDNS database."
-# OBSOLETE: msgstr "O tipo da base de dados PowerDNS."
-
-# OBSOLETE: msgid "Database username with administrative rights."
-# OBSOLETE: msgstr "Nome de utilizador da base de dados com direitos administrativos."
-
-# OBSOLETE: msgid "PowerDNS database name."
-# OBSOLETE: msgstr "Nome da base de dados PowerDNS."
-
-# OBSOLETE: msgid "Administrator Account"
-# OBSOLETE: msgstr "Conta de Administrador"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "Password for \"admin\" username with full rights to the Poweradmin "
-# OBSOLETE: "interface."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Palavra-passe para o nome de utilizador \"admin\" com direitos completos "
-# OBSOLETE: "à interface Poweradmin."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating SOA records and no hostmaster is provided, this value here "
-# OBSOLETE: "will be used."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Ao criar registos SOA e nenhum administrador de host for fornecido, este "
-# OBSOLETE: "valor será utilizado."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this value will be used as "
-# OBSOLETE: "primary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Ao criar novas zonas utilizando o modelo, este valor será utilizado como "
-# OBSOLETE: "servidor de nomes primário."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this value will be used as "
-# OBSOLETE: "secondary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Ao criar novas zonas utilizando o modelo, este valor será utilizado como "
-# OBSOLETE: "servidor de nomes secundário."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this optional value will be "
-# OBSOLETE: "used as tertiary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Ao criar novas zonas utilizando o modelo, este valor opcional será "
-# OBSOLETE: "utilizado como servidor de nomes terciário."
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "When creating new zones using the template, this optional value will be "
-# OBSOLETE: "used as quaternary nameserver."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Ao criar novas zonas utilizando o modelo, este valor opcional será "
-# OBSOLETE: "utilizado como servidor de nomes quaternário."
-
-# OBSOLETE: msgid "Preparation:"
-# OBSOLETE: msgstr "Preparação:"
-
-# OBSOLETE: msgid "Let's get your PowerDNS database ready for Poweradmin."
-# OBSOLETE: msgstr "Vamos preparar a sua base de dados PowerDNS para o Poweradmin."
-
-# OBSOLETE: msgid "About PowerDNS"
-# OBSOLETE: msgstr "Sobre o PowerDNS"
-
-#, auto-english-fallback
-# OBSOLETE: msgid ""
-# OBSOLETE: "PowerDNS is a DNS server that stores its data in an SQL database. "
-# OBSOLETE: "Poweradmin will help you manage this database via a web interface."
-# OBSOLETE: msgstr ""
-# OBSOLETE: "PowerDNS é um servidor DNS que armazena os seus dados numa base de dados "
-# OBSOLETE: "SQL. O Poweradmin irá ajudá-lo a gerir esta base de dados através de uma "
-# OBSOLETE: "interface web."
-
-# OBSOLETE: msgid "Before proceeding, you should have:"
-# OBSOLETE: msgstr "Antes de prosseguir, deve ter:"
-
-# OBSOLETE: msgid "An operational PowerDNS installation"
-# OBSOLETE: msgstr "Uma instalação operacional do PowerDNS"
-
-# OBSOLETE: msgid "Database connectivity details (hostname, username, password)"
-# OBSOLETE: msgstr ""
-# OBSOLETE: "Detalhes de conectividade da base de dados (nome do host, nome de "
-# OBSOLETE: "utilizador, palavra-passe)"
-
-# OBSOLETE: msgid "Administrative access to your database"
-# OBSOLETE: msgstr "Acesso administrativo à sua base de dados"
-
-# OBSOLETE: msgid "Database Preparations"
-# OBSOLETE: msgstr "Preparações da Base de Dados"
-
-# OBSOLETE: msgid "In the next steps, Poweradmin will:"
-# OBSOLETE: msgstr "Nos próximos passos, o Poweradmin irá:"
-
-# OBSOLETE: msgid "Connect to your PowerDNS database"
-# OBSOLETE: msgstr "Conectar-se à sua base de dados PowerDNS"
-
-# OBSOLETE: msgid "Create tables needed for Poweradmin functionality"
-# OBSOLETE: msgstr "Criar tabelas necessárias para a funcionalidade do Poweradmin"
-
-# OBSOLETE: msgid "Set up an administrator account for web access"
-# OBSOLETE: msgstr "Configurar uma conta de administrador para acesso web"
-
-# OBSOLETE: msgid "Create a config file to store your settings"
-# OBSOLETE: msgstr "Criar um ficheiro de configuração para armazenar as suas definições"
-
 
 
